--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ Library/metadata/*
 Library/previews/*
 Library/ScriptAssemblies/*
 
+CurrentLayout.dwlt
+
 AnnotationManager
 assetDatabase3
 AssetImportState
